[workspace]
members = [
    "transport",
    "examples/wasm-client",
    "examples/helloworld",
]

[patch.crates-io]
tonic = { git = "https://github.com/LedgerDomain/tonic", branch = "boxdot-wasm-websockets" }
tonic-build = { git = "https://github.com/LedgerDomain/tonic", branch = "boxdot-wasm-websockets" }
